clusters/home/apps/audiobookshelf/audiobookshelf/configs/audiobookshelf-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf-ingressroute
  namespace: audiobookshelf
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://audiobookshelf.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Audiobookshelf
    gethomepage.dev/group: Entertainment
    gethomepage.dev/icon: mdi-audio
    gethomepage.dev/app: audiobookshelf # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Audiobookshelf
    #gethomepage.dev/widget.type: "audiobookshelf"
    #gethomepage.dev/widget.url: "https://audiobookshelf.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`audiobookshelf.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: audiobookshelf
      port: 10216
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: audiobookshelf-certificate-secret
